# Localdemy

./: .gitignore  README.md  localdemy.py  main.py  pyproject.toml  requirements.txt
src/localdemy/: __init__.py  database.py  library.py  main.py  video_player.py  video_utils.py  window.py
ui/: progress_dialog.ui
